--- a/scss/_related.scss
+++ b/scss/_related.scss
@@ -2,7 +2,7 @@
   margin: 0 auto 6rem;
   max-width: calc(1590px * 0.9);
   
-  @media (max-width: '860px') {
+  @media (max-width: 1467px) {
     margin: 0 2rem;
   }  
 
