--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -11,11 +11,14 @@ footer {
       justify-content: space-between;
       padding: 6rem 0 10rem;
 
+      @media (max-width: 1500px) {
+        width: 90%;
+        margin: 0 auto
+      }
+
       @media (max-width: '900px') {
         flex-direction: column;
         gap: 2rem;
-        width: 90%;
-        margin: 0 auto;
     }
 
       .customer-service,
