--- a/css/style.css
+++ b/css/style.css
@@ -616,7 +616,7 @@ footer .footer__content p {
   height: 100dvh;
   overflow: hidden;
   transition: all 0.5s ease-in-out;
-  max-width: 100;
+  max-width: 100%;
 }
 .main-nav-container .main-nav-mobile .mobile-sidebar .mobile-sidebar__contents {
   margin: 6rem 2rem 0.5rem;
