--- a/scss/_main_nav_mobile.scss
+++ b/scss/_main_nav_mobile.scss
@@ -11,7 +11,7 @@
       height: 100dvh;
       overflow: hidden;
       transition: all .5s ease-in-out;
-      max-width: 100;
+      max-width: 100%;
 
       .mobile-sidebar__contents {
           margin: 6rem 2rem 0.5rem;
