--- a/css/style.css
+++ b/css/style.css
@@ -359,7 +359,7 @@
 .subscribe {
   max-width: 1431px;
   margin: 0 auto 2rem;
-  background-image: url("../assets/img/newsletter_bg.png");
+  background-image: url("../assets/img/newsletter_bg.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
