--- a/scss/_subscribe.scss
+++ b/scss/_subscribe.scss
@@ -3,7 +3,7 @@
 .subscribe {
   max-width: calc(1590px * 0.9);
   margin: 0 auto 2rem;
-  background-image: url('../assets/img/newsletter_bg.png');
+  background-image: url('../assets/img/newsletter_bg.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
