fixed accordion clickable area

--- a/scss/_accordion.scss
+++ b/scss/_accordion.scss
@@ -33,6 +33,16 @@
         cursor: pointer;
         font-size: 1.2rem;
       }
+
+      .click-catcher {
+        cursor: pointer;
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        left: 0;
+        z-index: 1;
+      }
     }
 
     .accordion__row__content {
