--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,15 @@
   cursor: pointer;
   font-size: 1.2rem;
 }
+.accordion .accordion__row .accordion__row__title .click-catcher {
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  z-index: 1;
+}
 .accordion .accordion__row .accordion__row__content {
   max-height: 0px;
   overflow-y: hidden;
@@ -626,8 +635,12 @@ footer .footer__content p {
   font-size: 1.2rem;
 }
 .main-nav-container .main-nav-mobile .mobile-sidebar .mobile-sidebar__contents li {
-  border-bottom: 1px solid #f0f0f0;
-  margin: 6px 0;
+  opacity: 0.7;
+  border-bottom: 2px solid #e5e5e5;
+  margin: 1rem 0;
+}
+.main-nav-container .main-nav-mobile .mobile-sidebar .mobile-sidebar__contents li:hover {
+  opacity: 1;
 }
 .main-nav-container .main-nav-mobile .mobile-sidebar .mobile-sidebar__contents a {
   color: black;
